Extract line wrapping lore code